# repo-wiki

./: .dockerignore  .env.example  .gitignore  .indexer.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README_CN.md  README_EN.md  RELEASE_v0.1.2.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.indexer/: manifest.json
.indexer/skills/: codebase.md
docs/: api-reference.md
indexer/: ast_parser.py  cache.py  cli.py  config.py  embedding.py  git.py  git_ops.py  go_parser.py  grouper.py  hooks.py  indexing.py  java_parser.py  js_parser.py  llm.py  manifest.py  mcp_server.py  repo_registry.py  rest_api.py  retrieval.py  ruby_parser.py  rust_parser.py  task_store.py  utils.py  vector_store.py  wiki.py
indexer/static/: index.html
indexer/templates/: index.md.j2  page.md.j2  skill.md.j2
skills/: SKILL.md
skills/evals/: evals.json
tests/: test_ast_parser.py  test_config.py  test_grouper.py  test_p1_fixes.py
tests/fixtures/sample_java/: App.java
tests/fixtures/sample_ruby/: app.rb
tests/fixtures/sample_rust/: lib.rs
wiki/: INDEX.md  indexer.md  root.md  tests.md  tests_fixtures.md
